WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277165
[WPE] When a specified WPE_DISPLAY is not available, fail, instead of silently using a fallback
https://bugs.webkit.org/show_bug.cgi?id=277165
Summary
[WPE] When a specified WPE_DISPLAY is not available, fail, instead of silentl...
Nikolas Zimmermann
Reported
2024-07-26 13:15:02 PDT
Currently when we set WPE_DISPLAY, e.g. to 'wpe-display-wayland', and the Wayland connection fails, we still try the next possible WPEDisplay (by extension point enumeration) -- that is undesired, instead we should fail.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-07-26 13:16:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31313
EWS
Comment 2
2024-07-28 08:45:50 PDT
Committed
281468@main
(3f572031b825): <
https://commits.webkit.org/281468@main
> Reviewed commits have been landed. Closing PR #31313 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug