[WPE] When a specified WPE_DISPLAY is not available, fail, instead of silently using a fallback https://bugs.webkit.org/show_bug.cgi?id=277165

Reviewed by Michael Catanzaro.

If the environemnt variable 'WPE_DISPLAY' is explicitely set to a value, e.g. 'wpe-display-wayland'
we should fail, if the Wayland connection fails or the platform is unavailable instead of silently
choosing a fallback.

* Source/WebKit/WPEPlatform/wpe/WPEDisplay.cpp:
(wpe_display_get_default):

Canonical link: https://commits.webkit.org/281468@main